fix: overflow :bug:

--- a/static/harryWeather.css
+++ b/static/harryWeather.css
@@ -2,6 +2,7 @@
 
 .harryMascot {
     position: absolute;
+    overflow-x: hidden;
     right: 0;
     bottom: 0;
     font-style: italic;
